[package]
name = "imbuf"
version = "0.1.0"
edition = "2024"
authors = ["mineichen"]
description = "Image buffers that abstract over underlying storage (Vec, Arc, or custom backends). Features copy-on-write semantics for efficient memory usage."
license = "MPL-2.0"
repository = "https://github.com/mineichen/image-buffer"
readme = "README.md"
keywords = ["image", "buffer", "ffi", "copy-on-write"]
categories = ["multimedia::images", "graphics", "computer-vision", "data-structures"]

[dependencies]
thiserror = "2"
image_0_25 = { version = "0.25", package = "image", optional = true }
